Terraform_Djanog/Terraform/03_securitygroups.tf
resource "aws_security_group" "load-balancer" {
    name = "load_balancer_security_group"
    description = "Control access to the ALB"
    vpc_id = aws_vpc.production-vpc.id

    ingress {
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    ingress {
        from_port        = 443
        to_port          = 443
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }
}    
    # ECS Security group(tarffic ALB -> ECS, ssh -> ECS)
resource "aws_security_group" "ecs" {
    name = "ecs_security_group"
    description = "Control access from the ALB only"
    vpc_id = aws_vpc.production-vpc.id

    ingress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        security_groups      = [aws_security_group.load-balancer.id]
    }
    ingress {
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }
}
